syntax = "proto3";

package envoy.config.accesslog.v2;

option java_outer_classname = "WasmProto";
option java_multiple_files = true;
option java_package = "io.envoyproxy.envoy.config.accesslog.v2";

import "validate/validate.proto";
import "google/protobuf/struct.proto";
import "envoy/config/wasm/v2/wasm.proto";

// [#protodoc-title: Wasm access log]

// Custom configuration for an :ref:`AccessLog <envoy_api_msg_config.filter.accesslog.v2.AccessLog>`
// that calls into a WASM VM. Configures the built-in *envoy.wasm_access_log*
// AccessLog.
message WasmAccessLog {
  envoy.config.wasm.v2.PluginConfig config = 1;
}
